0.6.8/io.gladed.watchable/kotlinx.coroutines.-coroutine-scope/index.md
[io.gladed.watchable](../index.md) / [kotlinx.coroutines.CoroutineScope](./index.md)

### Extensions for kotlinx.coroutines.CoroutineScope

| Name | Summary |
|---|---|
| [batch](batch.md) | `suspend fun <C : `[`Change`](../-change.md)`> CoroutineScope.batch(watchable: `[`Watchable`](../-watchable/index.md)`<`[`C`](batch.md#C)`>, period: `[`Long`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-long/index.html)` = IMMEDIATE, func: suspend (`[`List`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.collections/-list/index.html)`<`[`C`](batch.md#C)`>) -> `[`Unit`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-unit/index.html)`): `[`Watcher`](../-watcher/index.md)<br>Deliver multiple changes for this [Watchable](../-watchable/index.md) to [func](batch.md#io.gladed.watchable$batch(kotlinx.coroutines.CoroutineScope, io.gladed.watchable.Watchable((io.gladed.watchable.batch.C)), kotlin.Long, kotlin.coroutines.SuspendFunction1((kotlin.collections.List((io.gladed.watchable.batch.C)), kotlin.Unit)))/func) until the returned [Watcher](../-watcher/index.md) is closed or this [CoroutineScope](#) completes. |
| [bind](bind.md) | `suspend fun <M, C : `[`Change`](../-change.md)`> CoroutineScope.bind(dest: `[`MutableWatchable`](../-mutable-watchable/index.md)`<`[`M`](bind.md#M)`, `[`C`](bind.md#C)`>, origin: `[`Watchable`](../-watchable/index.md)`<`[`C`](bind.md#C)`>): `[`Unit`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-unit/index.html)<br>Bind [dest](bind.md#io.gladed.watchable$bind(kotlinx.coroutines.CoroutineScope, io.gladed.watchable.MutableWatchable((io.gladed.watchable.bind.M, io.gladed.watchable.bind.C)), io.gladed.watchable.Watchable((io.gladed.watchable.bind.C)))/dest) so that it receives values from [origin](bind.md#io.gladed.watchable$bind(kotlinx.coroutines.CoroutineScope, io.gladed.watchable.MutableWatchable((io.gladed.watchable.bind.M, io.gladed.watchable.bind.C)), io.gladed.watchable.Watchable((io.gladed.watchable.bind.C)))/origin) as long as the calling coroutineContext lives.`suspend fun <M, C : `[`Change`](../-change.md)`, C2 : `[`Change`](../-change.md)`> CoroutineScope.bind(dest: `[`MutableWatchable`](../-mutable-watchable/index.md)`<`[`M`](bind.md#M)`, `[`C`](bind.md#C)`>, origin: `[`Watchable`](../-watchable/index.md)`<`[`C2`](bind.md#C2)`>, period: `[`Long`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-long/index.html)` = IMMEDIATE, apply: `[`M`](bind.md#M)`.(`[`C2`](bind.md#C2)`) -> `[`Unit`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-unit/index.html)`): `[`Unit`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-unit/index.html)<br>Bind [dest](bind.md#io.gladed.watchable$bind(kotlinx.coroutines.CoroutineScope, io.gladed.watchable.MutableWatchable((io.gladed.watchable.bind.M, io.gladed.watchable.bind.C)), io.gladed.watchable.Watchable((io.gladed.watchable.bind.C2)), kotlin.Long, kotlin.Function2((io.gladed.watchable.bind.M, io.gladed.watchable.bind.C2, kotlin.Unit)))/dest) so that it receives changes from [origin](bind.md#io.gladed.watchable$bind(kotlinx.coroutines.CoroutineScope, io.gladed.watchable.MutableWatchable((io.gladed.watchable.bind.M, io.gladed.watchable.bind.C)), io.gladed.watchable.Watchable((io.gladed.watchable.bind.C2)), kotlin.Long, kotlin.Function2((io.gladed.watchable.bind.M, io.gladed.watchable.bind.C2, kotlin.Unit)))/origin) and applies them with [apply](bind.md#io.gladed.watchable$bind(kotlinx.coroutines.CoroutineScope, io.gladed.watchable.MutableWatchable((io.gladed.watchable.bind.M, io.gladed.watchable.bind.C)), io.gladed.watchable.Watchable((io.gladed.watchable.bind.C2)), kotlin.Long, kotlin.Function2((io.gladed.watchable.bind.M, io.gladed.watchable.bind.C2, kotlin.Unit)))/apply) for as long as this [CoroutineScope](#) lives. |
| [simple](simple.md) | `suspend fun <S, C : `[`HasSimpleChange`](../-has-simple-change/index.md)`<`[`S`](simple.md#S)`>> CoroutineScope.simple(watchable: `[`SimpleWatchable`](../-simple-watchable/index.md)`<`[`S`](simple.md#S)`, `[`C`](simple.md#C)`>, func: suspend `[`S`](simple.md#S)`.() -> `[`Unit`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-unit/index.html)`): `[`Watcher`](../-watcher/index.md)<br>Deliver simplified changes for this [Watchable](../-watchable/index.md) as receiver objects to [func](simple.md#io.gladed.watchable$simple(kotlinx.coroutines.CoroutineScope, io.gladed.watchable.SimpleWatchable((io.gladed.watchable.simple.S, io.gladed.watchable.simple.C)), kotlin.coroutines.SuspendFunction1((io.gladed.watchable.simple.S, kotlin.Unit)))/func) until the returned [Watcher](../-watcher/index.md) is closed or this [CoroutineScope](#) completes. |
| [waitFor](wait-for.md) | `suspend fun <C : `[`Change`](../-change.md)`, W : `[`Watchable`](../-watchable/index.md)`<`[`C`](wait-for.md#C)`>> CoroutineScope.waitFor(target: `[`W`](wait-for.md#W)`, condition: (`[`W`](wait-for.md#W)`) -> `[`Boolean`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-boolean/index.html)`): `[`Unit`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-unit/index.html)<br>Suspend until [condition](wait-for.md#io.gladed.watchable$waitFor(kotlinx.coroutines.CoroutineScope, io.gladed.watchable.waitFor.W, kotlin.Function1((io.gladed.watchable.waitFor.W, kotlin.Boolean)))/condition) returns true, calling it after each group of changes. |
| [watch](watch.md) | `suspend fun <C : `[`Change`](../-change.md)`> CoroutineScope.watch(watchable: `[`Watchable`](../-watchable/index.md)`<`[`C`](watch.md#C)`>, period: `[`Long`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-long/index.html)` = IMMEDIATE, func: suspend (`[`C`](watch.md#C)`) -> `[`Unit`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-unit/index.html)`): `[`Watcher`](../-watcher/index.md)<br>Deliver changes for this [Watchable](../-watchable/index.md) to [func](watch.md#io.gladed.watchable$watch(kotlinx.coroutines.CoroutineScope, io.gladed.watchable.Watchable((io.gladed.watchable.watch.C)), kotlin.Long, kotlin.coroutines.SuspendFunction1((io.gladed.watchable.watch.C, kotlin.Unit)))/func) until the returned [Watcher](../-watcher/index.md) is closed or this [CoroutineScope](#) completes. |
